# maelstrom

./: .editorconfig  .gitignore  .maelstrom.yaml  CLAUDE.md  README.md  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.claude/: settings.json
.claude/review-guides/: python.md
.github/workflows/: app-test.yml  test.yml
agent-cli/: package.json  tsconfig.json
agent-cli/src/: cli.ts  index.ts  protocol.ts  server.ts  session.ts  transport.ts
app/: biome.json  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
app/e2e/: app.spec.ts
app/src/: App.tsx  globals.css  test-setup.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs
app/src/commands/: list-all.ts
app/src/components/: agent-card.tsx  agent-list.tsx  app-layout.tsx  detail-panel.tsx  project-list.tsx  status-badge.tsx
app/src/hooks/: use-maelstrom-data.ts
app/src/types/: maelstrom.ts
docs/dev/: architecture-patterns.md  architecture.md  scheduled-tasks.md  tasks.md
shared/: claude-header.md
shared/commands/: continue-task.md  create-subtasks.md  learn-project-structure.md  plan-next-step.md  plan-task.md  project-skeleton.md  reopen-branch.md  review-branch.md  watch-pr.md
shared/review-guides/: core.md
shared/skills/cmux/: SKILL.md
src/maelstrom/: __init__.py  admin_cli.py  branch_name.py  claude_integration.py  claude_sessions.py  cli.py  cmux.py  config.py  context.py  describe_change.py  doctor.py  env.py  env_cli.py  env_store.py  git_cli.py  github.py  github_cli.py  linear.py  ports.py  process.py  review.py  review_prepare.py  schedule.py  schedule_launchd.py  sentry.py  session_cli.py  session_discovery.py  session_store.py  shell.py  status_cli.py  table.py  task.py  task_actions.py  task_cli.py  task_store.py  uptimerobot.py  util.py  worktree.py  worktree_launcher.py  worktree_model.py
tests/: conftest.py  git_helpers.py  test_admin_cli.py  test_branch_name.py  test_cli.py  test_close_force.py  test_cmux.py  test_config.py  test_context.py  test_describe_change.py  test_doctor.py  test_env.py  test_env_cli.py  test_env_store.py  test_git_cli.py  test_github.py  test_github_cli.py  test_integrations_auth.py  test_linear.py  test_mael_layout.py  test_ports.py  test_review.py  test_review_prepare.py  test_schedule.py  test_schedule_launchd.py  test_sentry.py  test_session_cli.py  test_session_discovery.py  test_session_store.py  test_shell.py  test_slack.py  test_sync_flags.py  test_task.py  test_task_actions.py  test_task_cli.py  test_task_store.py  test_tidy_branches.py  test_uptimerobot.py  test_util.py  test_worktree.py  (+2 more)
tests/e2e/: conftest.py  test_env_lifecycle.py  test_env_listing.py  test_env_logs.py  test_env_workflow.py  test_git_operations_workflow.py  test_port_allocation.py  test_review.py  test_shared_services.py  test_tidy_branches.py  test_worktree_lifecycle.py  test_worktree_workflow.py
tools/mael-session-channel/: index.test.ts  index.ts  package.json
(+20 files in other folders)
