[project]
name = "maelstrom"
version = "0.1.0"
description = "Parallel development environment manager using git worktrees"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Sam Minnee" }
]
dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
mael = "maelstrom.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/maelstrom"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
