[project]
name = "sminnee-maelstrom"
version = "0.1.1"
description = "Parallel development environment manager using git worktrees"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Sam Minnee" }
]
dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[project.urls]
Repository = "https://github.com/sminnee/maelstrom"

[project.scripts]
mael = "maelstrom.cli:main"
sminnee-maelstrom = "maelstrom.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/maelstrom"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "e2e: end-to-end tests that spawn real processes or use real git repos",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
