[project]
name = "sminnee-maelstrom"
version = "0.1.1"
description = "Parallel development environment manager using git worktrees"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Sam Minnee" }
]
dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "ruff>=0.4",
    "pyright>=1.1",
]

[project.urls]
Repository = "https://github.com/sminnee/maelstrom"

[project.scripts]
mael = "maelstrom.cli:main"
sminnee-maelstrom = "maelstrom.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/maelstrom"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "e2e: end-to-end tests that spawn real processes or use real git repos",
    "slow: tests that take >10s (skip with -m 'not slow')",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-xdist>=3.0",
    "pyright>=1.1",
]

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
reportUnusedImport = true
reportUnusedVariable = true
reportDuplicateImport = true
reportMissingTypeStubs = false
